--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
   "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
+    "@next-auth/mongodb-adapter": "^1.1.1",
     "@popperjs/core": "2.9.1",
     "@tailwindcss/forms": "0.2.1",
+    "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
     "chart.js": "2.9.4",
+    "formik": "^2.2.9",
     "gulp": "^3.9.1",
     "gulp-append-prepend": "1.0.8",
+    "mongodb": "^4.1.1",
+    "mongoose": "^7.0.3",
     "next": "^13.2.4",
+    "next-auth": "^4.21.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
@@ -44,6 +51,7 @@
     "typescript": "4.2.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "autoprefixer": "10.2.5",
     "postcss": "8.2.8"
   }
